test/types/void/void-variable-use-1.good
void-variable-use-1.chpl:2: error: cannot use the value of a void variable
