test/types/void/void-variable-use-1.chpl
var x: void;
writeln(x);
